# ChangeLog for sci-visualization/mayavi
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/ChangeLog,v 1.3 2008/10/27 12:08:49 bicatali Exp $

  27 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild:
  Switch to EAPI=2 with use dependencies

  27 Apr 2007; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild:
  slotting 2->1

*mayavi-1.5 (24 Apr 2007)

  24 Apr 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +mayavi-1.5.ebuild:
  Initial import. Closing bug #50464. Thanks to Colin Macdonald <cbm@sfu.ca>,
  Simon-Nicolas Roth <simon.roth@videotron.ca> and others in the bug mentioned
  for their work.
