@@ -1,10 +1,10 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/Attic/mayavi-1.5.ebuild,v 1.3 2008/10/27 12:08:49 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/Attic/mayavi-1.5.ebuild,v 1.4 2009/01/15 10:31:48 bicatali Exp $
 
 NEED_PYTHON=2.3
 EAPI=2
-inherit distutils
+inherit eutils distutils
 
 MY_P=MayaVi-${PV}
 DESCRIPTION="VTK based scientific data visualizer"
@@ -30,6 +30,7 @@ src_install() {
 		insinto /usr/share/doc/${PF}
 		doins -r examples || die
 	fi
+	make_desktop_entry mayavi "Mayavi2 2D/3D Scientific Visualization"
 }
 
 pkg_postinst() {
