@@ -1,6 +1,12 @@
 # ChangeLog for sci-visualization/mayavi
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/ChangeLog,v 1.3 2008/10/27 12:08:49 bicatali Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/mayavi/ChangeLog,v 1.4 2009/01/15 10:31:48 bicatali Exp $
+
+*mayavi-3.1.0 (15 Jan 2009)
+
+  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild,
+  +mayavi-3.1.0.ebuild:
+  New Enthought version for Mayavi2
 
   27 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> mayavi-1.5.ebuild:
   Switch to EAPI=2 with use dependencies
